# matsuyama-jihen

./: README.md  pyproject.toml
examples/: message_publisher.py  message_subscriber.py
src/matsuyama_jihen/: __init__.py  model.py
src/matsuyama_jihen/publisher/: __init__.py  __main__.py
src/matsuyama_jihen/subscriber/: __init__.py  __main__.py
src/matsuyama_jihen/util/: handler.py  publisher.py  service.py
