[project]
name = "matsuyama-jihen"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Hiroki Mizukami", email = "6128022+piroyoung@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
publisher = "matsuyama_jihen.publisher.__main__:main"
subscriber = "matsuyama_jihen.subscriber.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/matsuyama_jihen"]
